3.0.0 2012-??-??
API Changes
========
 * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits

Ini Settings Changes
========
 * new: xcache.disable_on_crash = Off

ChangeLog
========
 * closes #2: auto disable caching on crash
 * closes #972: warning/error when XCache is loaded incorrectly
 * closes #73: warn for improper PHP_FCGI_CHILDREN setting fcgi mode (>=PHP_5_3)
 * closes #174: updated api to support "clear all cache"
 * code refactor
   * uses extension to load XCache. load via zend_extension is unsupported
   * split XCache features into multiple sub modules
 * updated XCache admin page

2.0.1 2012-07-14
ChangeLog
========
 * fixed #279: segv when cache is full (since 2.0)
 * fixed #281: subsequenc request segv when timeout happens during compiling
 * admin/ config changed. please update accordingly
 * WIN32: kill invalidate CRT parameters on shutdown
 * fixed: <=PHP_5_2 duplicate error message failed to include file
 * fixed #283: XCache admin APIs (admin page) cause SEGV if XCache failed to initize
 * fixed possible re-include a file by mixing include/include_once
 * fixed #264, #284: __FILE__ __DIR__ handling for moved/hardlinked files (set "xcache.experimental = on" to eanble this fix)

2.0.0 2012-04-20
Ini Settings Changes
========
 * new: xcache.experimental = Off

ChangeLog
========
 * support for PHP_5_4
 * reduce memory usage by caching 1 for multiple same content files
 * correct __FILE__ __DIR__ supported for hardlinked files
 * fixed #275: one line struct definition was confusing struct parser
 * fixed #102: segv when var cacher is too small
 * fixed #55: segv php tokenizer on certain special situation
 * fixed #278: admin page: wrong layout in opera
 * compiler errors: all compiler warning (E_STRICT only currently) is now cached and is supported for user handler
 * tests/bug52160.phpt: report multiple error correctly

1.3.2 2011-06-04
========
 * avoid possible filename injection in admin page