@@ -2,6 +2,7 @@
 API Changes
 ========
  * chg: proto array xcache_clear_cache(int type, [ int id = -1 ]). -1 means all cache splits
+ * new: proto array xcache_enable_cache(int type, [ int id = -1, [ bool enable = true ] ])
 
 Ini Settings Changes
 ========
